--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
     "express": "^4.17.2",
     "http": "^0.0.1-security",
     "mongodb": "^4.3.0",
-    "multer": "^1.4.4",
     "pidcrypt": "^0.0.32",
     "random-org": "^2.2.0",
-    "socket.io": "^4.4.1",
-    "socketio-file-upload": "^0.7.3"
+    "socket.io": "^4.4.1"
   }
 }
