--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,22 @@
     "name": "The Clover Rescue Project",
     "icons": [
       {
-        "src": "/assets/icon512.svg",
+        "src": "/assets/logo_x512.svg",
         "type": "image/svg+xml",
         "sizes": "512x512"
       },
       {
-        "src": "/assets/icon192.png",
+        "src": "/assets/logo_x192.png",
         "type": "image/png",
         "sizes": "192x192"
       },
       {
-        "src": "/assets/icon512.png",
+        "src": "/assets/logo_x192.svg",
+        "type": "image/svg+xml",
+        "sizes": "192x192"
+      },
+      {
+        "src": "/assets/logo_x512.png",
         "type": "image/png",
         "sizes": "512x512"
       },
